--- a/client/src/style.css
+++ b/client/src/style.css
@@ -24,6 +24,10 @@ body {
 .message-container {
   height: 50px;
   margin-top: 10px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .grid-container {
@@ -52,10 +56,16 @@ body {
 }
 
 .message-container .message {
-  background-color: #444444;
+  /* background-color: #444444; */
   border-radius: 10px;
   padding: 10px;
   margin: 0;
+}
+
+.message-container .play-again {
+  background-color: #444444;
+  border-radius: 4px;
+  padding: 4px;
 }
 
 .key-container {
