--- a/client/src/style.css
+++ b/client/src/style.css
@@ -13,6 +13,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  max-height: 100vh;
 }
 
 .title-container {
