--- a/client/src/style.css
+++ b/client/src/style.css
@@ -7,7 +7,7 @@ body {
   background-color: black
 }
 
-.game-container {
+.main-container {
   height: 90vh;
   display:flex;
   flex-direction: column;
@@ -16,9 +16,21 @@ body {
   max-height: 100vh;
 }
 
+.game-container {
+  display: flex;
+}
+
+.wordle-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* right: 15%; */
+}
+
 .title-container {
   text-align: center;
-  width: 1000px;
+  width: 85vw;
   border-bottom: solid 1px #444444;
 }
 
@@ -86,10 +98,65 @@ body {
   margin: 4px;
 }
 
+.key-container button:hover {
+  filter: brightness(80%);
+}
+
 .key-container button:nth-child(11) {
   margin-left: 30px;
 }
 .key-container button:nth-child(20), 
 .key-container button:nth-child(28) {
   width: 68px;
+}
+
+.ai-container {
+  display:flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  align-items: center;
+  margin-left: 8%;
+  margin-top: 10%;
+  /* right: 10%; */
+}
+.hint-label {
+  position: relative;
+  text-align: center;
+  width: 100%;
+  border-bottom: solid 1px #444444;
+}
+.hint-container {
+  position: relative;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto auto;
+  align-self: center;
+  align-content: center;
+  align-items: center;
+  margin: 5%;
+  margin-top: 2%;
+}
+
+.hint {
+  display: flex;
+  margin: 8px;
+}
+.hint:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.hint-tile {
+  width: 40px;
+  height: 40px;
+  border: 3px solid;
+  border-color: #444444;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-left: 2px;
+  font-size: large;
+  font-weight: bolder;
+  background-color: black;
 }
