--- a/client/src/style.css
+++ b/client/src/style.css
@@ -164,6 +164,12 @@ body {
   margin-bottom: 5%;
 }
 
+.possible-word-container {
+  border: 3px solid;
+  border-color: rgb(101, 131, 84);
+  margin-bottom: 5%;
+}
+
 .ai-container img {
   position: relative;
   align-self: center;
